$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-30 [B] Fixed issue when clicking keyword in file information (thread ID 64209) {eenemeenemuu}
2010-03-30 [C] Changed delimiter in page title (thread ID 64283) {eenemeenemuu}
2010-03-30 [B] Fixed referer issue when switching between login.php and contact.php (thread ID 64288) {eenemeenemuu}
2010-03-30 [O] Removed hard coded user_id on install.php (thread ID 64292) {eenemeenemuu}
2010-03-30 [O] Updated German language files {eenemeenemuu}
2010-03-29 [B] Removed referer from contact link if we are already on the contact page (thread ID 64288) {eenemeenemuu}
2010-03-28 [A] Added user-contributed partially-translated Spanish language file {GauGau}
2010-03-27 [D] Various minor documentation improvements {GauGau}
2010-03-26 [A] Added plugin hook main_page_layout {GauGau}
2010-03-26 [B] Fixed wrong linked files counter for subcategories {eenemeenemuu}
2010-03-26 [B] Fixed category meta album issue with linked files (thread ID 64155) {eenemeenemuu}
2010-03-25 [B] Improved fix for IE and non-latin characters in album name (thread ID 64167) {Nibbler}
2010-03-25 [C] Fixed validation issue with javascript generated page navigation {timoswelt}
2010-03-25 [C] Always display arrow and delete icons in album manager {eenemeenemuu}
2010-03-25 [B] Fixed sidebar search (thread ID 64247) {eenemeenemuu}
2010-03-25 [C] Added missing greybox class to updater help {GauGau}
2010-03-24 [A] Added guest token. Fixes guests cannot enter file details issue (thread ID 62522) {eenemeenemuu}
2010-03-24 [B] Fixed issue with IE and non-latin characters in album name (thread ID 64167) {eenemeenemuu}